force-app/main/default/objects/InvoiceLineItem__c/fields/CalcUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CalcUnitPrice__c</fullName>
    <formula>ChargeAmount__c / Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>