force-app/main/default/objects/InvoiceLineItem__c/fields/ChargeName__c.field-meta.xml
<CustomField>
    <fullName>ChargeName__c</fullName>
    <label>Charge Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>