force-app/main/default/objects/InvoiceLineItem__c/fields/Customer_Account_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Mismatch__c</fullName>
    <formula>Invoice__r.CustomerAccount__c &lt;&gt; SubscriptionLineItem__r.Subscription__r.Account__c</formula>
    <label>Customer Account Mismatch</label>
    <type>Checkbox</type>
</CustomField>