force-app/main/default/objects/InvoiceLineItem__c/fields/InvoiceNeedsCustomer__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNeedsCustomer__c</fullName>
    <formula>ISBLANK( Invoice__r.CustomerAccount__c )</formula>
    <label>Invoice Needs Customer</label>
    <type>Checkbox</type>
</CustomField>