force-app/main/default/objects/InvoiceLineItem__c/fields/IsHardware__c.field-meta.xml
<CustomField>
    <fullName>IsHardware__c</fullName>
    <formula>SubscriptionLineItem__r.Product__r.RecognizedRevenueAccountingCode__c = &quot;Revenue Hardware&quot;
||
SubscriptionLineItem__r.Product__r.RecognizedRevenueAccountingCode__c = &quot;Revenue Hardware MINI&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Hardware</label>
    <type>Checkbox</type>
</CustomField>