force-app/main/default/objects/InvoiceLineItem__c/fields/IsNewBusiness__c.field-meta.xml
<CustomField>
    <fullName>IsNewBusiness__c</fullName>
    <formula>Invoice__r.InvoiceDate__c &lt;=
 Invoice__r.CustomerAccount__r.FirstInvoiceDate__c + 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is New Business</label>
    <type>Checkbox</type>
</CustomField>