force-app/main/default/objects/InvoiceLineItem__c/fields/PreCOVIDAmount__c.field-meta.xml
<CustomField>
    <fullName>PreCOVIDAmount__c</fullName>
    <formula>IF(
CONTAINS(ChargeName__c,&quot;Covid&quot;),
 TotalAmount__c  * 12,
TotalAmount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-COVID Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>