force-app/main/default/objects/InvoiceLineItem__c/fields/Product_Price_EUR__c.field-meta.xml
<CustomField>
    <fullName>Product_Price_EUR__c</fullName>
    <formula>SubscriptionLineItem__r.Product__r.Price_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Price (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>