force-app/main/default/objects/InvoiceLineItem__c/fields/Quote_Price_Issue__c.field-meta.xml
<CustomField>
    <fullName>Quote_Price_Issue__c</fullName>
    <formula>not(isblank( SubscriptionLineItem__c ))
&amp;&amp;
not(isblank( SubscriptionLineItem__r.QuoteLineItem__c ))
&amp;&amp;
not(contains(SubscriptionLineItem__r.Product__r.Model__c,&quot;discount&quot;))
&amp;&amp;
 UnitPrice__c  &lt;&gt;   SubscriptionLineItem__r.QuoteLineItem__r.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Price Issue</label>
    <type>Checkbox</type>
</CustomField>