force-app/main/default/objects/InvoiceLineItem__c/fields/ShowServicePeriod__c.field-meta.xml
<CustomField>
    <fullName>ShowServicePeriod__c</fullName>
    <formula>ServiceStartDate__c  &lt;&gt; ServiceEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Service Period</label>
    <type>Checkbox</type>
</CustomField>