force-app/main/default/objects/InvoiceLineItem__c/fields/SubscriptionLineItem__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Line Item</label>
    <referenceTo>SubscriptionLineItem__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>