force-app/main/default/objects/InvoiceLineItem__c/fields/TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>TaxCategory__c</fullName>
    <formula>if(
TaxAmount__c / ChargeAmount__c = 0,
&apos;0%&apos;,
if(
TaxAmount__c / ChargeAmount__c &gt; 0.175,
&apos;19%&apos;,
&apos;16%&apos;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Category</label>
    <type>Text</type>
</CustomField>