force-app/main/default/objects/InvoiceLineItem__c/fields/VAT_Adjustment_Line__c.field-meta.xml
<CustomField>
    <fullName>VAT_Adjustment_Line__c</fullName>
    <formula>IF(OR(ChargeName__c = &quot;VAT 16%&quot;, ChargeName__c = &quot;VAT 19%&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Adjustment Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>