force-app/main/default/objects/InvoiceLineItem__c/fields/ZuoraId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraId__c</fullName>
    <externalId>true</externalId>
    <label>ZuoraId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>